Chapter 3: Dates and times with Flask-Moment (3e)

--- a/templates/user.html
+++ b/templates/user.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
 
 {% block title %}Flasky{% endblock %}
 
-{% block page_content %}
+{% block content %}
 <div class="page-header">
     <h1>Hello, {{ name }}!</h1>
 </div>
